--- a/certifia/serving/templates/form.html
+++ b/certifia/serving/templates/form.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <title>Hello from Flask</title>
 {% if name %}
 <h1>Hello {{ name }}!</h1>
@@ -6,10 +5,7 @@
 <h1>Hello, World!</h1>
 {% endif %}
 
-
 <form action="/data" method="POST">
-    <p>Name <input type="text" name="Name" /></p>
-    <p>City <input type="text" name="City" /></p>
-    <p>Country <input type="text" name="Country" /></p>
+    <p>heure de départ <input type="text" name="heure-depart" /></p>
     <p><input type="submit" value="Submit" /></p>
 </form>
