--- a/certifia/serving/templates/form.html
+++ b/certifia/serving/templates/form.html
@@ -5,7 +5,8 @@
 <h1>Hello, World!</h1>
 {% endif %}
 
-<form action="/data" method="POST">
+<form action="/data" method="POST" enctype=multipart/form-data>
     <p>heure de départ <input type="text" name="heure-depart" /></p>
+    <p><input type=file name="file"></p>
     <p><input type="submit" value="Submit" /></p>
 </form>
