--- a/certifia/serving/templates/form.html
+++ b/certifia/serving/templates/form.html
@@ -1,12 +1,52 @@
-<title>Hello from Flask</title>
-{% if name %}
-<h1>Hello {{ name }}!</h1>
-{% else %}
-<h1>Hello, World!</h1>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Chargement des données</title>
+    <style>
+        .preference {
+            display: flex;
+            justify-content: space-between;
+            width: 450px;
+            margin: .5rem;
+        }
 
-<form action="/data" method="POST" enctype=multipart/form-data>
-    <p>heure de départ <input type="text" name="heure-depart" /></p>
-    <p><input type=file name="file"></p>
-    <p><input type="submit" value="Submit" /></p>
-</form>
+        input[type=submit] {
+            padding: 8px 16px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border: 2px solid #009879;
+            background-color: #009879;
+            color: white;
+            border-radius: 4px;
+        }
+
+        input[type=submit]:hover {
+            background-color: white;
+            color: black;
+            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+        }
+    </style>
+</head>
+<body>
+    <h1>Bonjour</h1>
+
+    <form action="/data" method="POST" enctype=multipart/form-data>
+        <div class="preference">
+            <label for="retard_arrivee">Prédire "RETARD A L'ARRIVEE"</label>
+            <input type="checkbox" name="retard_arrivee" id="retard_arrivee">
+        </div>
+        <div class="preference">
+            <label for="file">Votre fichier CSV</label>
+            <input type=file name="file" id="file">
+        </div>
+        <p><input type="submit" value="Submit" /></p>
+    </form>
+
+</body>
+</html>
